# Ecs

online-store/: .gitignore  CMakeLists.txt  README.md
online-store/include/: DatabaseConnection.h  Order.h  OrderItem.h  Payment.h  PaymentStrategy.h  Product.h  User.h
online-store/reports/: audit_report.csv
online-store/sql/: functions.sql  procedures.sql  sample_data.sql  tables.sql  triggers.sql
online-store/src/: DatabaseConnection.cpp  User.cpp  main.cpp
